--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lineer Regression OOP Implementation in Python**\n",
+        "# **Linear Regression OOP Implementation in Python**\n",
         "\n",
         "---\n",
         "without using Built-in Function\n",
